@@ -13,7 +13,7 @@ parts =
     zopepy
 
 # If you want to get the last versions of eggs, you have to comment the line "versions-prod.cfg"
-extends = 
+extends =
     http://dist.plone.org/release/4.2.5/versions.cfg
     versions-base.cfg
 
@@ -36,6 +36,7 @@ auto-checkout = appy
                 communesplone.layout
                 plonetheme.imioapps
                 imio.pm.locales
+                imio.migrator
 
 # Add additional eggs here
 # elementtree is required by Plone
@@ -69,13 +70,14 @@ communesplone.iconified_document_actions = svn http://svn.communesplone.org/svn/
 communesplone.layout = svn http://svn.communesplone.org/svn/communesplone/communesplone.layout/trunk
 plonetheme.imioapps = svn http://svn.communesplone.org/svn/communesplone/plonetheme.imioapps/trunk
 imio.pm.locales = svn http://svn.communesplone.org/svn/communesplone/imio.pm.locales/trunk
+imio.migrator = svn http://svn.communesplone.org/svn/communesplone/imio.migrator/trunk
 
 [productdistros]
 recipe = plone.recipe.distros
-urls = 
+urls =
 #    file://${buildout:directory}/ZPsycopgDA_2013.tgz
-nested-packages = 
-version-suffix-packages = 
+nested-packages =
+version-suffix-packages =
 
 [svnproducts]
 recipe = infrae.subversion
@@ -88,7 +90,7 @@ eggs = ${instance1:eggs}
 
 [instance1]
 recipe = plone.recipe.zope2instance
-#effective-user = 
+#effective-user =
 user = admin:admin
 http-address = 8081
 zserver-threads = 4
@@ -114,6 +116,7 @@ eggs =
     appy
     Products.PloneMeeting
     imio.pm.locales
+    imio.migrator
     plonetheme.imioapps
 
 # If you want to register ZCML slugs for any packages, list them here.
