@@ -1,9 +1,9 @@
 [versions]
-Pillow = 1.7.7
+Pillow = 1.7.8
 Products.DocFinderTab = 1.0.5
-collective.ckeditor = 3.6.7
+collective.ckeditor = 3.6.11
 
-mr.developer = 1.22
+mr.developer = 1.25
 
 plone.recipe.distros = 1.5
 infrae.subversion = 1.4.5
@@ -11,9 +11,15 @@ infrae.subversion = 1.4.5
 ordereddict = 1.1
 
 #Required by:
-#collective.ckeditor 3.6.6
-collective.plonefinder = 1.0.2
-collective.quickupload = 1.5.4
+#collective.ckeditor 3.6.11
+collective.plonefinder = 1.0.3
+collective.quickupload = 1.5.6
 demjson = 1.6
 
-Products.ZCTextIndex = 2.13.4
+#Required by:
+#Products.PloneMeeting
+collective.documentviewer = 2.2.2b2
+
+#Required by:
+#collective.documentviewer 2.2.2b2
+repoze.catalog = 0.8.2
